objects/Project_Hold_Data__c.object
<CustomObject>
    <fields>
        <fullName>End_DateTime__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Status__c</fullName>
        <description>Automatically populated with the project status at the End Date Time</description>
        <label>End Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Justification__c</fullName>
        <label>Hold Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Project__c</fullName>
        <label>Residential Project</label>
        <referenceTo>Residential_Project__c</referenceTo>
        <relationshipLabel>Project Hold Data</relationshipLabel>
        <relationshipName>Project_Hold_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Status__c</fullName>
        <description>Field is auto populated with the project status at the time the Project Hold Data record is created</description>
        <label>Start Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Hold_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Hold Data</label>
    <nameField>
        <displayFormat>Hold-{000000}</displayFormat>
        <label>Project Hold Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Hold Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>